--- a/esercizi_Dom/inputTesto/index.html
+++ b/esercizi_Dom/inputTesto/index.html
@@ -9,13 +9,11 @@
 <body>
 
     <div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
     </div>
+
+    <textarea id="freText" rows="6" cols="100" style="display: none;"></textarea>
+    <br>
     <button id="button">Aggiungi paragrafo</button>
 
     <div id="form" style="display: none;">
@@ -23,15 +21,14 @@
         <br />
         <input type="checkbox" id="inizio" value="inizio"/> inserisci prima del paragrafo:
         <select id="select">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
+            <!-- <option value="1">1</option> -->
         </select>
+        <br>
         <br>
         <button id="button2">Aggiungi</button>
     </div>
            
-    <script src="eseDom.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
